<resources>
    <string name="app_name">M16_camping</string>
    <string name="button_save">Guardar</string>
    <string name="empty_not_saved_parcela">Parcela no guardada porque el nombre está vacío.</string>
    <string name="empty_not_saved_reserva">Reserva no guardada porque el nombre del titular de la reserva está vacío.</string>
    <string name="add_parcela">Añadir parcela</string>
    <string name="menu_delete_parcela">Borrar Parcela</string>
    <string name="menu_edit_parcela">Editar Parcela</string>
    <!-- Recursos para pantalla activity_parcelaedit -->
    <string name="nombre_parcela">Nombre de la Parcela:</string>
    <string name="nombre_cliente">Nombre del Cliente:</string>
    <string name="hint_nombre_parcela">Escribe un nombre ...</string>
    <string name="hint_nombre_cliente">Escribe el nombre del titular de la reserva ...</string>
    <string name="desc_parcela">Descripcion de la Parcela:</string>
    <string name="tlf_cliente">Teléfono del Cliente:</string>
    <string name="fecha_entrada">Fecha de entrada:</string>
    <string name="fecha_salida">Fecha de salida:</string>
    <string name="hint_desc">Escribe una descripción ...</string>
    <string name="hint_tlf">Escribe del teléfono del titular de la reserva.</string>
    <string name="hint_fecha">01/01/2000</string>
    <string name="maxOcupantes_parcela">Max. num. ocupantes de la Parcela:</string>
    <string name="hint_maxOcupantes_parcela">0</string>
    <string name="precio_parcela">Precio de la Parcela:</string>
    <string name="hint_precio_parcela">0</string>
    <!-- Recursos para pantalla activity_parcelapad -->
    <string name="titulo_pareclapad">Parcelas</string>
    <string name="filtrar_por_nombre">Filtrar por Nombre</string>
    <string name="filtrar_por_nombreCliente">Filtrar por Nombre del Cliente</string>
    <string name="filtrar_por_numocupantes">Filtrar por Número de Ocupantes</string>
    <string name="filtrar_por_numMovil">Filtrar por Número de Móvil</string>
    <string name="filtrar_por_precio">Filtrar por Precio (Ascendente)</string>
    <string name="filtrar_por_fechaEntrada">Filtrar por Fecha de Entrada (Más cercanas a más lejanas)</string>
    <string name="welcome_image_desc">Imagen de bienvenida para Foodlink_M16</string>
    <string name="bienvenido_a_m16_camping">¡Bienvenido a M16 Camping!</string>
    <string name="titulo_reservapad">Reservas</string>

    <string name="lista_parcelas">Lista de parcelas de la Reserva:</string>
    <string name="button_add_parcela">Añadir/Eliminar Parcela</string>
    <string name="button_save_add_parcela">Volver</string>
    <string name="lista_parcelas_todas">Lista de todas las parcelas disponibles para añadir a su reserva:</string>
    <string name="estado_disponible">+</string>
    <string name="estado_no_disponible">-</string>
    <string name="precio_total">Precio Total:</string>
    <string name="hint_precio">0</string>
</resources>