<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <LinearLayout android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre_cliente"
            android:layout_margin="@dimen/big_padding"
            android:textSize="18sp" />
        <EditText
            android:id="@+id/nombreCliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/min_height"
            android:fontFamily="sans-serif-light"
            android:hint="@string/hint_nombre_cliente"
            android:inputType="textAutoComplete"
            android:layout_margin="@dimen/big_padding"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tlf_cliente"
            android:layout_margin="@dimen/big_padding"
            android:textSize="18sp" />


        <EditText
            android:id="@+id/tlfCliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/big_padding"
            android:layout_weight="1"
            android:fontFamily="sans-serif-light"
            android:hint="@string/hint_tlf"
            android:inputType="number"
            android:scrollbars="vertical"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fecha_entrada"
            android:layout_margin="@dimen/big_padding"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/fecha_entrada"
            android:layout_width="157dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/hint_fecha"
            android:inputType="textAutoComplete" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fecha_salida"
            android:layout_margin="@dimen/big_padding"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/fecha_salida"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/hint_fecha"
            android:inputType="textAutoComplete" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/big_padding">

        <!-- Relleno para mostrar lista de parcelas -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lista_parcelas"
            android:textSize="18sp"
            android:layout_marginBottom="@dimen/small_padding" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/border">

            <LinearLayout
                android:id="@+id/listaParcelasContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <!-- Aquí se agregarán dinámicamente las filas de parcelas -->
            </LinearLayout>
        </ScrollView>

        <!-- Botón para añadir parcela -->
        <Button
            android:id="@+id/button_add_parcela"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_padding"
            android:background="@color/colorPrimary"
            android:text="@string/button_add_parcela"
            android:textColor="@color/buttonLabel" />
    </LinearLayout>


    <Button
        android:id="@+id/button_save_reserva"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/big_padding"
        android:background="@color/colorPrimary"
        android:text="@string/button_save"
        android:textColor="@color/buttonLabel" />

</LinearLayout>
